--- a/12z/Biseri2.html
+++ b/12z/Biseri2.html
@@ -123,7 +123,7 @@
 			<br>Мето(относно Iron Man 2):
 			<br>- Той (Тони Старк) говореше много бързо макар че
 			<br>беше пиян и не фъфлеше, ся щи кажа как:
-			<br>The...................................
+			<br>.....The...................................
 			<br>Диан:
 			<br>- ROFLMAO.
 			</p>
