--- a/12z/index.html
+++ b/12z/index.html
@@ -27,7 +27,7 @@
             <ul class="clearfix">
 			<a href="index.html"><span></span>За нас</a>
 			<a href="diary.html"><span></span>Дневникът</a>
-			<a href="media.html"><span></span>Галерия</a>
+			<a href="media.html"><span></span>Галерия</a></ul>
         </nav><!--  Krai na konteinera za navigaciqta ni --> 
 		
 		<div class="container-25-l clearfix">
@@ -67,6 +67,7 @@
 			</textarea>
 			<input type="submit" value="submit"/>
 			</form>
+            </nav>
 		</div>
 	</div>
 		<div class="footer">
